# swagger.json
@@ -13,8 +13,8 @@
       "description": "Work with notices"
     },
     {
-      "name": "Категорія 2",
-      "description": "Опис категорії 2"
+      "name": "Pets",
+      "description": "Work with pets"
     }
   ],
   "schemes": [
@@ -27,7 +27,7 @@
     "application/json"
   ],
   "paths": {
-    "/category": {
+    "/api/notices/category": {
       "get": {
         "tags": ["Notices"],
         "description": "Get array notices sort by category",
@@ -45,7 +45,8 @@
           {
             "name": "category",
             "in": "query",
-            "type": "string"
+            "type": "string",
+            "enum": ["sell", "in good hands", "lost/found"]
           },
           {
             "name": "search",
@@ -117,7 +118,7 @@
         }
       }
     },
-    "/favorite": {
+    "/api/notices/favorite": {
       "get": {
         "tags": ["Notices"],
         "description": "Get array notices added in favorite by user",
@@ -202,7 +203,7 @@
         }
       }
     },
-    "/": {
+    "/api/notices/": {
       "post": {
         "tags": ["Notices"],
         "description": "Create new notice",
@@ -216,12 +217,8 @@
           },
           {
             "name": "title",
-            "in": "body",
-            "schema": {
-              "type": "string",
-              "minLength": 10,
-              "maxLength": 80
-            },
+            "in": "formData",
+            "type": "string",
             "required": true
           },
           {
@@ -232,28 +229,20 @@
           },
           {
             "name": "name",
-            "in": "body",
-            "schema": {
-              "type": "string",
-              "minLength": 2,
-              "maxLength": 20
-            },
-            "required": true
-          },
-          {
-            "name": "birthday",
             "in": "formData",
             "type": "string",
             "required": true
           },
           {
+            "name": "birthday",
+            "in": "formData",
+            "type": "number",
+            "required": true
+          },
+          {
             "name": "breed",
-            "in": "body",
-            "schema": {
-              "type": "string",
-              "minLength": 2,
-              "maxLength": 20
-            },
+            "in": "formData",
+            "type": "string",
             "required": true
           },
           {
@@ -272,12 +261,8 @@
           },
           {
             "name": "comments",
-            "in": "body",
-            "schema": {
-              "type": "string",
-              "minLength": 20,
-              "maxLength": 500
-            },
+            "in": "formData",
+            "type": "string",
             "required": true
           },
           {
@@ -311,7 +296,7 @@
                       "format": "text"
                     },
                     "birthday": {
-                      "type": "string",
+                      "type": "number",
                       "format": "text"
                     },
                     "breed": {
@@ -354,6 +339,7 @@
       "get": {
         "tags": ["Notices"],
         "description": "Get all notices user's created",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "authorization",
@@ -393,7 +379,7 @@
                     "format": "text"
                   },
                   "birthday": {
-                    "type": "string",
+                    "type": "number",
                     "format": "text"
                   },
                   "breed": {
@@ -436,10 +422,11 @@
         }
       }
     },
-    "/{noticeId}": {
+    "/api/notices/{noticeId}": {
       "delete": {
         "tags": ["Notices"],
         "description": "Delete notice by ID",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "noticeId",
@@ -490,7 +477,7 @@
                   "format": "text"
                 },
                 "birthday": {
-                  "type": "string",
+                  "type": "number",
                   "format": "text"
                 },
                 "breed": {
@@ -531,10 +518,11 @@
         }
       }
     },
-    "/favorite-add/{noticeId}": {
+    "/api/notices/favorite-add/{noticeId}": {
       "patch": {
         "tags": ["Notices"],
         "description": "Add notice in favorite",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "noticeId",
@@ -556,10 +544,11 @@
         }
       }
     },
-    "/favorite-delete/{noticeId}": {
+    "/api/notices/favorite-delete/{noticeId}": {
       "patch": {
         "tags": ["Notices"],
         "description": "Delete notice from favorite",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "name": "noticeId",
@@ -567,6 +556,132 @@
             "required": true,
             "type": "string"
           },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/user-pets": {
+      "post": {
+        "tags": ["Pets"],
+        "description": "Create new pet",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "image",
+            "in": "formData",
+            "type": "file",
+            "required": true
+          },
+          {
+            "name": "name",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "birthday",
+            "in": "formData",
+            "type": "number",
+            "required": true
+          },
+          {
+            "name": "breed",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "comments",
+            "in": "formData",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/api/user-pets/my-pets": {
+      "get": {
+        "tags": ["Pets"],
+        "description": "Get array pets user's created",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "type": "string",
+                    "format": "text"
+                  },
+                  "name": {
+                    "type": "string",
+                    "format": "text"
+                  },
+                  "birthday": {
+                    "type": "number",
+                    "format": "text"
+                  },
+                  "breed": {
+                    "type": "string",
+                    "format": "text"
+                  },
+                  "category": {
+                    "type": "string",
+                    "format": "text"
+                  },
+                  "comments": {
+                    "type": "string",
+                    "format": "text"
+                  },
+                  "photoURL": {
+                    "type": "string",
+                    "format": "text"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/user-pets/:petId": {
+      "delete": {
+        "tags": ["Pets"],
+        "description": "Delete pet by ID",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
           {
             "name": "authorization",
             "in": "header",
